Fixato Footer visibile con overflow-y del Main

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,10 @@ main {
 
 footer {
     background-color: #222;
+    position: fixed;
+    bottom: 0%;
+    left: 0%;
+    width: 100%;
 }
 
 .pulsante {
